--- a/src/tests/Modulus.PluginHost.Tests/Modulus.PluginHost.Tests.csproj
+++ b/src/tests/Modulus.PluginHost.Tests/Modulus.PluginHost.Tests.csproj
@@ -7,6 +7,8 @@
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
-    <ProjectReference Include="..\..\src\Modulus.PluginHost\Modulus.PluginHost.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Modulus.PluginHost\Modulus.PluginHost.csproj" />
   </ItemGroup>
 </Project>
