--- a/tests/Modulus.Core.Tests/Modulus.Core.Tests.csproj
+++ b/tests/Modulus.Core.Tests/Modulus.Core.Tests.csproj
@@ -15,11 +15,17 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
+    <PackageReference Include="NSubstitute" Version="5.3.0" />
     <PackageReference Include="xunit" Version="2.9.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="3.1.5">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\Modulus.Core\Modulus.Core.csproj" />
+    <ProjectReference Include="..\..\src\Modulus.Sdk\Modulus.Sdk.csproj" />
   </ItemGroup>
 
   <ItemGroup>
