refactor: extract Modulus.UI.Avalonia as independent UI component library
- Create Modulus.UI.Avalonia project with reusable UI components
- Migrate NavigationView, WindowDragBehavior to UI library
- Add default themes and control styles
- Update Host.Avalonia to reference UI library
- Update ComponentsDemo.UI.Avalonia to reference UI library
- Keep host-specific components (SideNav, TitleBar, ContentHost) in Host

--- a/src/Hosts/Modulus.Host.Avalonia/Modulus.Host.Avalonia.csproj
+++ b/src/Hosts/Modulus.Host.Avalonia/Modulus.Host.Avalonia.csproj
@@ -38,6 +38,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Modulus.Core\Modulus.Core.csproj" />
     <ProjectReference Include="..\..\Modulus.UI.Abstractions\Modulus.UI.Abstractions.csproj" />
+    <ProjectReference Include="..\..\Modulus.UI.Avalonia\Modulus.UI.Avalonia.csproj" />
     <ProjectReference Include="..\..\Modulus.Sdk\Modulus.Sdk.csproj" />
   </ItemGroup>
   
