refactor: create Modulus.UI.Blazor library and migrate Blazor components
- Add Modulus.UI.Blazor project with MudBlazor reference
- Add NavigationMenu component with badge and hierarchy support
- Add SideDrawer component with mini mode and configurable items
- Add TitleBar component with customizable title and badge
- Add ContentArea component for main content layout
- Add ThemeProvider component for theme management
- Update Host.Blazor to use UI library components
- Remove Host.Blazor/Layout components (all migrated)

--- a/src/Hosts/Modulus.Host.Blazor/Modulus.Host.Blazor.csproj
+++ b/src/Hosts/Modulus.Host.Blazor/Modulus.Host.Blazor.csproj
@@ -67,7 +67,7 @@
     <ItemGroup>
       <ProjectReference Include="..\..\Modulus.Core\Modulus.Core.csproj" />
       <ProjectReference Include="..\..\Modulus.Sdk\Modulus.Sdk.csproj" />
-      <ProjectReference Include="..\..\Modulus.UI.Abstractions\Modulus.UI.Abstractions.csproj" />
+      <ProjectReference Include="..\..\Modulus.UI.Blazor\Modulus.UI.Blazor.csproj" />
       <!-- Module references for static page routing -->
       <ProjectReference Include="..\..\Modules\SimpleNotes\SimpleNotes.Core\SimpleNotes.Core.csproj" />
     </ItemGroup>
