--- a/src/Modules/ComponentsDemo/ComponentsDemo.UI.Blazor/ComponentsDemo.UI.Blazor.csproj
+++ b/src/Modules/ComponentsDemo/ComponentsDemo.UI.Blazor/ComponentsDemo.UI.Blazor.csproj
@@ -10,7 +10,7 @@
   <ItemGroup>
     <ProjectReference Include="..\ComponentsDemo.Core\ComponentsDemo.Core.csproj" />
     <ProjectReference Include="..\..\..\Modulus.Sdk\Modulus.Sdk.csproj" />
-    <ProjectReference Include="..\..\..\Modulus.UI.Abstractions\Modulus.UI.Abstractions.csproj" />
+    <ProjectReference Include="..\..\..\Modulus.UI.Blazor\Modulus.UI.Blazor.csproj" />
   </ItemGroup>
 
   <ItemGroup>
