--- a/src/Modulus.UI.Avalonia/Modulus.UI.Avalonia.csproj
+++ b/src/Modulus.UI.Avalonia/Modulus.UI.Avalonia.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Avalonia" Version="11.3.9" />
     <PackageReference Include="Avalonia.Themes.Fluent" Version="11.3.9" />
     <PackageReference Include="Avalonia.Xaml.Behaviors" Version="11.3.0.6" />
+    <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
   </ItemGroup>
 
   <ItemGroup>
