feat: add application icons and AppsAddIn icon to icon set
- Add app.ico to Avalonia project Assets and configure ApplicationIcon
- Set MainWindow.axaml Icon property
- Add appicon.png to Blazor/MAUI Resources/AppIcon
- Add favicon.ico to wwwroot and update index.html
- Add AppsAddIn icon (Regular + Filled) from Fluent UI System Icons
- Update Modules menu item to use AppsAddIn icon

--- a/src/Modules/SimpleNotes/SimpleNotes.UI.Avalonia/SimpleNotes.UI.Avalonia.csproj
+++ b/src/Modules/SimpleNotes/SimpleNotes.UI.Avalonia/SimpleNotes.UI.Avalonia.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SimpleNotes.Core\SimpleNotes.Core.csproj" />
+    <ProjectReference Include="..\..\..\Modulus.UI.Avalonia\Modulus.UI.Avalonia.csproj" />
   </ItemGroup>
 
   <ItemGroup>
