--- a/src/Hosts/Modulus.Host.Blazor/Modulus.Host.Blazor.csproj
+++ b/src/Hosts/Modulus.Host.Blazor/Modulus.Host.Blazor.csproj
@@ -18,6 +18,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <EnableDefaultCssItems>false</EnableDefaultCssItems>
         <Nullable>enable</Nullable>
+        <ModulusAssemblyDomain>Shared</ModulusAssemblyDomain>
 
         <!-- Display name -->
         <ApplicationTitle>Modulus.Host.Blazor</ApplicationTitle>
@@ -41,7 +42,7 @@
 
     <ItemGroup>
         <!-- App Icon -->
-        <MauiIcon Include="Resources\AppIcon\appicon.svg" ForegroundFile="Resources\AppIcon\appiconfg.svg" Color="#512BD4" />
+        <MauiIcon Include="Resources\AppIcon\appicon.png" />
 
         <!-- Splash Screen -->
         <MauiSplashScreen Include="Resources\Splash\splash.svg" Color="#512BD4" BaseSize="128,128" />
