--- a/src/Modules/EchoPlugin/EchoPlugin.UI.Avalonia/EchoPlugin.UI.Avalonia.csproj
+++ b/src/Modules/EchoPlugin/EchoPlugin.UI.Avalonia/EchoPlugin.UI.Avalonia.csproj
@@ -11,10 +11,13 @@
     <ProjectReference Include="..\EchoPlugin.Core\EchoPlugin.Core.csproj" />
     <ProjectReference Include="..\..\..\Modulus.Sdk\Modulus.Sdk.csproj" />
     <ProjectReference Include="..\..\..\Modulus.UI.Abstractions\Modulus.UI.Abstractions.csproj" />
+    <ProjectReference Include="..\..\..\Modulus.UI.Avalonia\Modulus.UI.Avalonia.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Avalonia" Version="11.2.1" />
+    <PackageReference Include="Avalonia" Version="11.3.9" />
+    <PackageReference Include="Avalonia.Diagnostics" Version="11.3.9" />
+    <PackageReference Include="AvaloniaUI.DiagnosticsSupport" Version="2.1.1" />
   </ItemGroup>
 
   <!-- Copy manifest.json to output directory -->
