refactor: assembly domain architecture and theme resources reorganization
- Add AssemblyDomain architecture for module isolation
- Reorganize UI.Avalonia theme resources structure
- Add IconVariant support for Regular/Filled icons
- Update module csproj files with ModulusAssemblyDomain
- Add UI.Avalonia.Tests project
- Cleanup deprecated theme files

--- a/src/Modules/EchoPlugin/EchoPlugin.UI.Avalonia/EchoPlugin.UI.Avalonia.csproj
+++ b/src/Modules/EchoPlugin/EchoPlugin.UI.Avalonia/EchoPlugin.UI.Avalonia.csproj
@@ -5,6 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <RootNamespace>Modulus.Modules.EchoPlugin.UI.Avalonia</RootNamespace>
+    <ModulusAssemblyDomain>Module</ModulusAssemblyDomain>
   </PropertyGroup>
 
   <ItemGroup>
