--- a/src/Modules/EchoPlugin/EchoPlugin.UI.Blazor/EchoPlugin.UI.Blazor.csproj
+++ b/src/Modules/EchoPlugin/EchoPlugin.UI.Blazor/EchoPlugin.UI.Blazor.csproj
@@ -16,6 +16,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <RootNamespace>Modulus.Modules.EchoPlugin.UI.Blazor</RootNamespace>
+    <ModulusAssemblyDomain>Module</ModulusAssemblyDomain>
   </PropertyGroup>
 
   <!-- Copy manifest.json to output directory -->
