--- a/src/Modules/ComponentsDemo/ComponentsDemo.Core/ComponentsDemo.Core.csproj
+++ b/src/Modules/ComponentsDemo/ComponentsDemo.Core/ComponentsDemo.Core.csproj
@@ -14,6 +14,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <RootNamespace>Modulus.Modules.ComponentsDemo</RootNamespace>
+    <ModulusAssemblyDomain>Module</ModulusAssemblyDomain>
   </PropertyGroup>
 
 </Project>
