--- a/src/Modules/ComponentsDemo/ComponentsDemo.UI.Avalonia/ComponentsDemo.UI.Avalonia.csproj
+++ b/src/Modules/ComponentsDemo/ComponentsDemo.UI.Avalonia/ComponentsDemo.UI.Avalonia.csproj
@@ -5,6 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <RootNamespace>Modulus.Modules.ComponentsDemo.UI.Avalonia</RootNamespace>
+    <ModulusAssemblyDomain>Module</ModulusAssemblyDomain>
   </PropertyGroup>
 
   <ItemGroup>
