--- a/src/Modules/ComponentsDemo/ComponentsDemo.UI.Blazor/ComponentsDemo.UI.Blazor.csproj
+++ b/src/Modules/ComponentsDemo/ComponentsDemo.UI.Blazor/ComponentsDemo.UI.Blazor.csproj
@@ -5,6 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <RootNamespace>Modulus.Modules.ComponentsDemo.UI.Blazor</RootNamespace>
+    <ModulusAssemblyDomain>Module</ModulusAssemblyDomain>
   </PropertyGroup>
 
   <ItemGroup>
