--- a/src/Modules/SimpleNotes/SimpleNotes.UI.Blazor/SimpleNotes.UI.Blazor.csproj
+++ b/src/Modules/SimpleNotes/SimpleNotes.UI.Blazor/SimpleNotes.UI.Blazor.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net10.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <ModulusAssemblyDomain>Module</ModulusAssemblyDomain>
   </PropertyGroup>
 
 
