--- a/src/Modulus.UI.Avalonia/Modulus.UI.Avalonia.csproj
+++ b/src/Modulus.UI.Avalonia/Modulus.UI.Avalonia.csproj
@@ -7,6 +7,7 @@
     <AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
     <RootNamespace>Modulus.UI.Avalonia</RootNamespace>
     <Description>Avalonia UI components library for Modulus framework</Description>
+    <ModulusAssemblyDomain>Shared</ModulusAssemblyDomain>
   </PropertyGroup>
 
   <ItemGroup>
