--- a/src/Modulus.UI.Blazor/Modulus.UI.Blazor.csproj
+++ b/src/Modulus.UI.Blazor/Modulus.UI.Blazor.csproj
@@ -6,6 +6,7 @@
     <Nullable>enable</Nullable>
     <RootNamespace>Modulus.UI.Blazor</RootNamespace>
     <Description>Blazor UI components library for Modulus framework</Description>
+    <ModulusAssemblyDomain>Shared</ModulusAssemblyDomain>
   </PropertyGroup>
 
   <ItemGroup>
