--- a/src/Modulus.Core/Modulus.Core.csproj
+++ b/src/Modulus.Core/Modulus.Core.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Microsoft.Extensions.Logging" Version="10.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="10.0.0" />
+    <PackageReference Include="NuGet.Versioning" Version="6.9.1" />
   </ItemGroup>
 
   <ItemGroup>
