--- a/src/Hosts/Modulus.Host.Avalonia/appsettings.json
+++ b/src/Hosts/Modulus.Host.Avalonia/appsettings.json
@@ -1,6 +1,33 @@
 {
   "Modulus": {
     "DatabaseName": "Modulus"
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "[{Timestamp:yyyy-MM-dd HH:mm:ss.fff} {Level:u3}] [Host:{HostType}|Module:{ModuleName}|Src:{SourceContext}] {Message:lj}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs/AvaloniaApp/log-.txt",
+          "rollingInterval": "Day",
+          "retainedFileCountLimit": 7,
+          "outputTemplate": "[{Timestamp:yyyy-MM-dd HH:mm:ss.fff} {Level:u3}] [Host:{HostType}|Module:{ModuleName}|Src:{SourceContext}] {Message:lj}{NewLine}{Exception}"
+        }
+      }
+    ]
   }
 }
 
