--- a/src/Modules/ComponentsDemo/ComponentsDemo.Core/ComponentsDemo.Core.csproj
+++ b/src/Modules/ComponentsDemo/ComponentsDemo.Core/ComponentsDemo.Core.csproj
@@ -7,6 +7,8 @@
 
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="10.0.0" />
   </ItemGroup>
 
   <PropertyGroup>
