--- a/src/Modules/SimpleNotes/SimpleNotes.Core/SimpleNotes.Core.csproj
+++ b/src/Modules/SimpleNotes/SimpleNotes.Core/SimpleNotes.Core.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
     <PackageReference Include="MediatR" Version="14.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="10.0.0" />
   </ItemGroup>
 
   <ItemGroup>
