--- a/tests/Modulus.Core.Tests/Modulus.Core.Tests.csproj
+++ b/tests/Modulus.Core.Tests/Modulus.Core.Tests.csproj
@@ -16,7 +16,6 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="10.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="10.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Memory" Version="10.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
     <PackageReference Include="NSubstitute" Version="5.3.0" />
     <PackageReference Include="xunit" Version="2.9.3" />
@@ -29,6 +28,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\Modulus.Core\Modulus.Core.csproj" />
     <ProjectReference Include="..\..\src\Modulus.Sdk\Modulus.Sdk.csproj" />
+    <ProjectReference Include="..\..\src\Modulus.UI.Abstractions\Modulus.UI.Abstractions.csproj" />
   </ItemGroup>
 
   <ItemGroup>
