--- a/src/Hosts/Modulus.Host.Blazor/appsettings.json
+++ b/src/Hosts/Modulus.Host.Blazor/appsettings.json
@@ -1,6 +1,6 @@
 {
   "Modulus": {
-    "DatabaseName": "Modulus"
+    "DatabaseName": "BlazorModulus"
   },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
