update log format

--- a/src/Hosts/Modulus.Host.Blazor/appsettings.json
+++ b/src/Hosts/Modulus.Host.Blazor/appsettings.json
@@ -15,16 +15,16 @@
       {
         "Name": "Console",
         "Args": {
-          "outputTemplate": "[{Timestamp:yyyy-MM-dd HH:mm:ss.fff} {Level:u3}] [Host:{HostType}|Module:{ModuleName}|Src:{SourceContext}] {Message:lj}{NewLine}{Exception}"
+          "outputTemplate": "[{Timestamp:yyyy-MM-dd HH:mm:ss.fff} {Level:u3}] [Module:{ModuleName}|Src:{SourceContext}] {Message:lj}{NewLine}{Exception}"
         }
       },
       {
         "Name": "File",
         "Args": {
-          "path": "logs/BlazorApp/log-.txt",
+          "path": "BlazorApp-.txt",
           "rollingInterval": "Day",
           "retainedFileCountLimit": 7,
-          "outputTemplate": "[{Timestamp:yyyy-MM-dd HH:mm:ss.fff} {Level:u3}] [Host:{HostType}|Module:{ModuleName}|Src:{SourceContext}] {Message:lj}{NewLine}{Exception}"
+          "outputTemplate": "[{Timestamp:yyyy-MM-dd HH:mm:ss.fff} {Level:u3}] [Module:{ModuleName}|Src:{SourceContext}] {Message:lj}{NewLine}{Exception}"
         }
       }
     ]
