feat(hosts): add environment-aware configuration
- Add appsettings.Development.json for debug logging (Debug level)
- Add launchSettings.json with DOTNET_ENVIRONMENT and workingDirectory
- Update config loading to use DOTNET_ENVIRONMENT variable
- Production defaults to Information level logging

--- a/src/Hosts/Modulus.Host.Avalonia/Properties/launchSettings.json
+++ b/src/Hosts/Modulus.Host.Avalonia/Properties/launchSettings.json
@@ -1,11 +1,12 @@
 {
   "profiles": {
-    "Modulus.Host.Blazor": {
+    "Modulus.Host.Avalonia": {
       "commandName": "Project",
       "workingDirectory": "../../../artifacts",
       "environmentVariables": {
         "DOTNET_ENVIRONMENT": "Development"
-      }
+      },
+      "sqlDebugging": true
     }
   }
 }
