--- a/src/Hosts/Modulus.Host.Avalonia/Modulus.Host.Avalonia.csproj
+++ b/src/Hosts/Modulus.Host.Avalonia/Modulus.Host.Avalonia.csproj
@@ -1,5 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+  <Import Project="..\..\..\build\Modulus.Architecture.props" />
+
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net10.0</TargetFramework>
@@ -9,6 +11,9 @@
     <AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
     <ModulusAssemblyDomain>Shared</ModulusAssemblyDomain>
     <ApplicationIcon>Assets\app.ico</ApplicationIcon>
+    <OutputPath>..\..\..\artifacts\</OutputPath>
+    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+    <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
@@ -59,5 +64,6 @@
 
   <ItemGroup>
     <None Update="appsettings.json" CopyToOutputDirectory="Always" />
+    <None Update="appsettings.Development.json" CopyToOutputDirectory="Always" />
   </ItemGroup>
 </Project>
