--- a/src/Hosts/Modulus.Host.Blazor/Modulus.Host.Blazor.csproj
+++ b/src/Hosts/Modulus.Host.Blazor/Modulus.Host.Blazor.csproj
@@ -1,5 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
+    <Import Project="..\..\..\build\Modulus.Architecture.props" />
+
     <PropertyGroup>
         <TargetFramework>net10.0</TargetFramework>
         <!-- <TargetFrameworks>net10.0-android;net10.0-ios;net10.0-maccatalyst</TargetFrameworks> -->
@@ -21,6 +23,9 @@
         <EnableDefaultCssItems>false</EnableDefaultCssItems>
         <Nullable>enable</Nullable>
         <ModulusAssemblyDomain>Shared</ModulusAssemblyDomain>
+        <OutputPath>..\..\..\artifacts\</OutputPath>
+        <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+        <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
 
         <!-- Display name -->
         <ApplicationTitle>Modulus.Host.Blazor</ApplicationTitle>
@@ -85,6 +90,9 @@
 
     <ItemGroup>
       <Content Update="appsettings.json">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </Content>
+      <Content Update="appsettings.Development.json">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </Content>
     </ItemGroup>
