chore: unify build output paths to artifacts directory
- Update all csproj files to output to artifacts/ directory
- Archive unify-build-output-paths openspec change
- Update assembly domain rules documentation

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,6 +1,7 @@
 <Project>
-  
-  <!-- Import Modulus Architecture Props -->
-  <Import Project="$(MSBuildThisFileDirectory)build/Modulus.Architecture.props" />
-  
+  <!-- 
+    This file is intentionally minimal.
+    All project-specific configurations are defined in each .csproj file.
+    See build/Modulus.Architecture.props for AssemblyDomain attribute generation.
+  -->
 </Project>
