--- a/src/Modules/EchoPlugin/EchoPlugin.UI.Blazor/EchoPlugin.UI.Blazor.csproj
+++ b/src/Modules/EchoPlugin/EchoPlugin.UI.Blazor/EchoPlugin.UI.Blazor.csproj
@@ -1,5 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
+  <Import Project="..\..\..\..\build\Modulus.Architecture.props" />
+
+  <PropertyGroup>
+    <TargetFramework>net10.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
+    <RootNamespace>Modulus.Modules.EchoPlugin.UI.Blazor</RootNamespace>
+    <ModulusAssemblyDomain>Module</ModulusAssemblyDomain>
+    <OutputPath>..\..\..\..\artifacts\Modules\EchoPlugin\</OutputPath>
+    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+    <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\EchoPlugin.Core\EchoPlugin.Core.csproj" />
     <ProjectReference Include="..\..\..\Modulus.Sdk\Modulus.Sdk.csproj" />
@@ -10,14 +23,6 @@
     <PackageReference Include="MudBlazor" Version="8.15.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="10.0.0" />
   </ItemGroup>
-
-  <PropertyGroup>
-    <TargetFramework>net10.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-    <RootNamespace>Modulus.Modules.EchoPlugin.UI.Blazor</RootNamespace>
-    <ModulusAssemblyDomain>Module</ModulusAssemblyDomain>
-  </PropertyGroup>
 
   <!-- Copy manifest.json to output directory -->
   <ItemGroup>
