--- a/src/Modulus.UI.Avalonia/Modulus.UI.Avalonia.csproj
+++ b/src/Modulus.UI.Avalonia/Modulus.UI.Avalonia.csproj
@@ -1,5 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <Import Project="..\..\build\Modulus.Architecture.props" />
+
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
@@ -8,6 +10,9 @@
     <RootNamespace>Modulus.UI.Avalonia</RootNamespace>
     <Description>Avalonia UI components library for Modulus framework</Description>
     <ModulusAssemblyDomain>Shared</ModulusAssemblyDomain>
+    <OutputPath>..\..\artifacts\</OutputPath>
+    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+    <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
