--- a/src/Modules/ComponentsDemo/ComponentsDemo.UI.Avalonia/ComponentsDemo.UI.Avalonia.csproj
+++ b/src/Modules/ComponentsDemo/ComponentsDemo.UI.Avalonia/ComponentsDemo.UI.Avalonia.csproj
@@ -25,9 +25,9 @@
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.4.0" />
   </ItemGroup>
 
-  <!-- Copy manifest.json to output directory -->
+  <!-- Copy extension.vsixmanifest to output directory -->
   <ItemGroup>
-    <None Include="..\manifest.json" CopyToOutputDirectory="PreserveNewest" Link="manifest.json" />
+    <None Include="..\extension.vsixmanifest" CopyToOutputDirectory="PreserveNewest" Link="extension.vsixmanifest" />
   </ItemGroup>
 
 </Project>
