--- a/src/Modules/EchoPlugin/EchoPlugin.UI.Avalonia/EchoPlugin.UI.Avalonia.csproj
+++ b/src/Modules/EchoPlugin/EchoPlugin.UI.Avalonia/EchoPlugin.UI.Avalonia.csproj
@@ -26,9 +26,9 @@
     <PackageReference Include="AvaloniaUI.DiagnosticsSupport" Version="2.1.1" />
   </ItemGroup>
 
-  <!-- Copy manifest.json to output directory -->
+  <!-- Copy extension.vsixmanifest to output directory -->
   <ItemGroup>
-    <None Include="..\manifest.json" CopyToOutputDirectory="PreserveNewest" Link="manifest.json" />
+    <None Include="..\extension.vsixmanifest" CopyToOutputDirectory="PreserveNewest" Link="extension.vsixmanifest" />
   </ItemGroup>
 
 </Project>
