--- a/src/Modules/EchoPlugin/EchoPlugin.UI.Blazor/EchoPlugin.UI.Blazor.csproj
+++ b/src/Modules/EchoPlugin/EchoPlugin.UI.Blazor/EchoPlugin.UI.Blazor.csproj
@@ -24,9 +24,9 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="10.0.0" />
   </ItemGroup>
 
-  <!-- Copy manifest.json to output directory -->
+  <!-- Copy extension.vsixmanifest to output directory -->
   <ItemGroup>
-    <None Include="..\manifest.json" CopyToOutputDirectory="PreserveNewest" Link="manifest.json" />
+    <None Include="..\extension.vsixmanifest" CopyToOutputDirectory="PreserveNewest" Link="extension.vsixmanifest" />
   </ItemGroup>
 
 </Project>
