--- a/src/Modules/SimpleNotes/SimpleNotes.UI.Avalonia/SimpleNotes.UI.Avalonia.csproj
+++ b/src/Modules/SimpleNotes/SimpleNotes.UI.Avalonia/SimpleNotes.UI.Avalonia.csproj
@@ -22,9 +22,9 @@
     <PackageReference Include="Avalonia.Themes.Fluent" Version="11.3.9" />
   </ItemGroup>
 
-  <!-- Copy manifest.json to output directory -->
+  <!-- Copy extension.vsixmanifest to output directory -->
   <ItemGroup>
-    <None Include="..\manifest.json" CopyToOutputDirectory="PreserveNewest" Link="manifest.json" />
+    <None Include="..\extension.vsixmanifest" CopyToOutputDirectory="PreserveNewest" Link="extension.vsixmanifest" />
   </ItemGroup>
 
 </Project>
