feat: add module packaging and CLI tool
- Add nuke pack-module target for creating .modpkg packages
- Add Modulus.Cli project with install/uninstall/list commands
- Add host version compatibility validation
- Reorganize artifacts directory structure:
  - bin/ for host apps and shared assemblies
  - bin/Modules/ for module compilation output
  - cli/ for CLI tool
  - packages/ for CLI NuGet packages
  - ModulesInstaller/ for .modpkg files
  - tests/ for test assemblies
- Archive add-module-packaging change

--- a/src/Hosts/Modulus.Host.Avalonia/Modulus.Host.Avalonia.csproj
+++ b/src/Hosts/Modulus.Host.Avalonia/Modulus.Host.Avalonia.csproj
@@ -11,7 +11,7 @@
     <AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
     <ModulusAssemblyDomain>Shared</ModulusAssemblyDomain>
     <ApplicationIcon>Assets\app.ico</ApplicationIcon>
-    <OutputPath>..\..\..\artifacts\</OutputPath>
+    <OutputPath>..\..\..\artifacts\bin\</OutputPath>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
   </PropertyGroup>
