--- a/src/Hosts/Modulus.Host.Blazor/Modulus.Host.Blazor.csproj
+++ b/src/Hosts/Modulus.Host.Blazor/Modulus.Host.Blazor.csproj
@@ -23,7 +23,7 @@
         <EnableDefaultCssItems>false</EnableDefaultCssItems>
         <Nullable>enable</Nullable>
         <ModulusAssemblyDomain>Shared</ModulusAssemblyDomain>
-        <OutputPath>..\..\..\artifacts\</OutputPath>
+        <OutputPath>..\..\..\artifacts\bin\</OutputPath>
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
         <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
 
