--- a/src/Shared/Modulus.Infrastructure.Data/Modulus.Infrastructure.Data.csproj
+++ b/src/Shared/Modulus.Infrastructure.Data/Modulus.Infrastructure.Data.csproj
@@ -6,7 +6,7 @@
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <OutputPath>..\..\..\artifacts\</OutputPath>
+    <OutputPath>..\..\..\artifacts\bin\</OutputPath>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
   </PropertyGroup>
