--- a/src/Modulus.UI.Blazor/Modulus.UI.Blazor.csproj
+++ b/src/Modulus.UI.Blazor/Modulus.UI.Blazor.csproj
@@ -9,7 +9,7 @@
     <RootNamespace>Modulus.UI.Blazor</RootNamespace>
     <Description>Blazor UI components library for Modulus framework</Description>
     <ModulusAssemblyDomain>Shared</ModulusAssemblyDomain>
-    <OutputPath>..\..\artifacts\</OutputPath>
+    <OutputPath>..\..\artifacts\bin\</OutputPath>
     <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
   </PropertyGroup>
