refactor(bundled-modules): redesign proposal with EF migration-based module seeding
- Update proposal: module loading from DB only, skip directory scanning
- Add strongly-typed migration infrastructure (IModuleSeedData, IMenuSeedData)
- Add MigrationBuilderExtensions for type-safe InsertModule/InsertMenu/DeleteModule
- CLI command: modulus add-module-migration (auto-generated filename)
- Add migration consolidation task as first step
- CLI: auto-increment version (1.0.YYDDD.HHmm format)

--- a/src/Modulus.Cli/Modulus.Cli.csproj
+++ b/src/Modulus.Cli/Modulus.Cli.csproj
@@ -18,7 +18,11 @@
     <PackAsTool>true</PackAsTool>
     <ToolCommandName>modulus</ToolCommandName>
     <PackageId>Agibuild.Modulus.Cli</PackageId>
-    <Version>1.0.0</Version>
+    
+    <!-- Auto-increment version: Major.Minor.Build.Revision based on UTC datetime -->
+    <!-- Format: 1.0.YYDDD.HHmm where DDD=day of year, HHmm=time -->
+    <!-- Example: 1.0.25344.1430 = 2025, day 344, 14:30 UTC -->
+    <Version>1.0.$([System.DateTime]::UtcNow.ToString("yy"))$([System.DateTime]::UtcNow.DayOfYear.ToString("000")).$([System.DateTime]::UtcNow.ToString("HHmm"))</Version>
     <Authors>Modulus Team</Authors>
     <Description>Modulus module management CLI tool</Description>
     <PackageProjectUrl>https://github.com/user/Modulus</PackageProjectUrl>
