feat(extension-install): implement .modpkg package installation with robust cleanup
- Add InstallFromPackageAsync/InstallFromPackageStreamAsync to IModuleInstallerService
- Add ModuleInstallResult to handle installation outcomes with confirmation flow
- Add IModuleCleanupService with database-backed pending cleanup persistence
- Add ModuleExecutionGuard for module exception isolation and health tracking
- Add PendingCleanups table with EF migration for deferred directory cleanup
- Add MessageDialog component for Avalonia with theme-aware styling
- Add AvaloniaNotificationService for cross-platform notifications

Key improvements:
- Prevent system module overwrite by user installation
- Auto-load modules after installation with menu registration
- Handle locked DLL cleanup via retry and deferred cleanup on restart
- Cancel pending cleanup when module is reinstalled (prevents accidental deletion)
- Unified logging via ILogger (removed Debug.WriteLine)
- Fix ALC isolation by adding Avalonia assemblies to SharedAssemblies config

--- a/src/Hosts/Modulus.Host.Avalonia/appsettings.json
+++ b/src/Hosts/Modulus.Host.Avalonia/appsettings.json
@@ -1,6 +1,38 @@
 {
   "Modulus": {
-    "DatabaseName": "AvaloniaModulus"
+    "DatabaseName": "AvaloniaModulus",
+    "Runtime": {
+      "SharedAssemblies": [
+        "Avalonia",
+        "Avalonia.Base",
+        "Avalonia.Controls",
+        "Avalonia.Controls.ColorPicker",
+        "Avalonia.Controls.DataGrid",
+        "Avalonia.Desktop",
+        "Avalonia.Diagnostics",
+        "Avalonia.Fonts.Inter",
+        "Avalonia.FreeDesktop",
+        "Avalonia.Markup",
+        "Avalonia.Markup.Xaml",
+        "Avalonia.Markup.Xaml.Loader",
+        "Avalonia.MicroCom",
+        "Avalonia.Native",
+        "Avalonia.Remote.Protocol",
+        "Avalonia.ReactiveUI",
+        "Avalonia.Skia",
+        "Avalonia.Themes.Fluent",
+        "Avalonia.Themes.Simple",
+        "Avalonia.Win32",
+        "Avalonia.X11",
+        "CommunityToolkit.Mvvm",
+        "Microsoft.Extensions.DependencyInjection",
+        "Microsoft.Extensions.DependencyInjection.Abstractions",
+        "Microsoft.Extensions.Logging",
+        "Microsoft.Extensions.Logging.Abstractions",
+        "SkiaSharp",
+        "HarfBuzzSharp"
+      ]
+    }
   },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
@@ -21,7 +53,7 @@
       {
         "Name": "File",
         "Args": {
-          "path": "AvaloniaApp-.txt",
+          "path": ".txt",
           "rollingInterval": "Day",
           "retainedFileCountLimit": 7,
           "outputTemplate": "[{Timestamp:yyyy-MM-dd HH:mm:ss.fff} {Level:u3}] [Module:{ModuleName}|Src:{SourceContext}] {Message:lj}{NewLine}{Exception}"
