--- a/src/Hosts/Modulus.Host.Blazor/appsettings.json
+++ b/src/Hosts/Modulus.Host.Blazor/appsettings.json
@@ -21,7 +21,7 @@
       {
         "Name": "File",
         "Args": {
-          "path": "Modulus.Host.Blazor-.txt",
+          "path": ".txt",
           "rollingInterval": "Day",
           "retainedFileCountLimit": 7,
           "outputTemplate": "[{Timestamp:yyyy-MM-dd HH:mm:ss.fff} {Level:u3}] [Module:{ModuleName}|Src:{SourceContext}] {Message:lj}{NewLine}{Exception}"
